--- a/templetes/partials/header.hbs
+++ b/templetes/partials/header.hbs
@@ -18,7 +18,7 @@
 
 	<header class="cabecalho">
         <nav class="cabecalho-menu">
-            <a href="http://localhost:3000/" class="cabecalho-menu-item">Início</a>
+            <a href="/" class="cabecalho-menu-item">Início</a>
             <a class="cabecalho-menu-item">Sobre</a>
             <a class="cabecalho-menu-item">Meu Currículo</a>
         </nav>
