--- a/templetes/partials/header.hbs
+++ b/templetes/partials/header.hbs
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfólio - Fabricio Barreto">
-    <title>Plancto Site</title>
+    <title>Landing page - Plancto</title>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/e507d1a58f.js" crossorigin="anonymous"></script>
